@@ -1,38 +1,115 @@
 buildscript {
     repositories {
-        mavenLocal()
         maven { url "https://repo.grails.org/grails/core" }
     }
     dependencies {
         classpath "org.grails:grails-gradle-plugin:$grailsVersion"
-        classpath "org.grails.plugins:hibernate5:${gormVersion-".RELEASE"}"
-        classpath "com.bertramlabs.plugins:asset-pipeline-gradle:${assetPipelineVersion}"
-        classpath "gradle.plugin.com.energizedwork.webdriver-binaries:webdriver-binaries-gradle-plugin:1.4"
-        classpath 'org.grails.plugins:database-migration:3.0.4'
-        classpath "org.grails.plugins:views-gradle:1.2.10"
+        classpath "org.grails.plugins:views-gradle:2.0.4"
+        classpath "org.grails.plugins:hibernate5:7.0.0"
+        classpath "gradle.plugin.com.github.erdi.webdriver-binaries:webdriver-binaries-gradle-plugin:2.0"
+        classpath "com.bertramlabs.plugins:asset-pipeline-gradle:3.0.10"
+        classpath 'org.glassfish.jaxb:jaxb-runtime:2.3.1'
+        classpath 'org.grails.plugins:database-migration:3.1.0'
     }
 }
 
-version "0.11"
+def jvmOpenModulesArgs = [
+        "--add-opens=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED",
+        "--add-opens=java.base/java.io=ALL-UNNAMED",
+        "--add-opens=java.base/java.lang=ALL-UNNAMED",
+        "--add-opens=java.base/java.lang.annotation=ALL-UNNAMED",
+        "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED",
+        "--add-opens=java.base/java.lang.module=ALL-UNNAMED",
+        "--add-opens=java.base/java.lang.ref=ALL-UNNAMED",
+        "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
+        "--add-opens=java.base/java.math=ALL-UNNAMED",
+        "--add-opens=java.base/java.net=ALL-UNNAMED",
+        "--add-opens=java.base/java.net.spi=ALL-UNNAMED",
+        "--add-opens=java.base/java.nio=ALL-UNNAMED",
+        "--add-opens=java.base/java.nio.channels=ALL-UNNAMED",
+        "--add-opens=java.base/java.nio.channels.spi=ALL-UNNAMED",
+        "--add-opens=java.base/java.nio.charset=ALL-UNNAMED",
+        "--add-opens=java.base/java.nio.charset.spi=ALL-UNNAMED",
+        "--add-opens=java.base/java.nio.file=ALL-UNNAMED",
+        "--add-opens=java.base/java.nio.file.attribute=ALL-UNNAMED",
+        "--add-opens=java.base/java.nio.file.spi=ALL-UNNAMED",
+        "--add-opens=java.base/java.security=ALL-UNNAMED",
+        "--add-opens=java.base/java.security.acl=ALL-UNNAMED",
+        "--add-opens=java.base/java.security.cert=ALL-UNNAMED",
+        "--add-opens=java.base/java.security.interfaces=ALL-UNNAMED",
+        "--add-opens=java.base/java.security.spec=ALL-UNNAMED",
+        "--add-opens=java.base/java.text=ALL-UNNAMED",
+        "--add-opens=java.base/java.text.spi=ALL-UNNAMED",
+        "--add-opens=java.base/java.time=ALL-UNNAMED",
+        "--add-opens=java.base/java.time.chrono=ALL-UNNAMED",
+        "--add-opens=java.base/java.time.format=ALL-UNNAMED",
+        "--add-opens=java.base/java.time.temporal=ALL-UNNAMED",
+        "--add-opens=java.base/java.time.zone=ALL-UNNAMED",
+        "--add-opens=java.base/java.util=ALL-UNNAMED",
+        "--add-opens=java.base/java.util.concurrent=ALL-UNNAMED",
+        "--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED",
+        "--add-opens=java.base/java.util.concurrent.locks=ALL-UNNAMED",
+        "--add-opens=java.base/java.util.function=ALL-UNNAMED",
+        "--add-opens=java.base/java.util.jar=ALL-UNNAMED",
+        "--add-opens=java.base/java.util.regex=ALL-UNNAMED",
+        "--add-opens=java.base/java.util.spi=ALL-UNNAMED",
+        "--add-opens=java.base/java.util.stream=ALL-UNNAMED",
+        "--add-opens=java.base/java.util.zip=ALL-UNNAMED",
+        "--add-opens=java.datatransfer/java.awt.datatransfer=ALL-UNNAMED",
+        "--add-opens=java.desktop/java.applet=ALL-UNNAMED",
+        "--add-opens=java.desktop/java.awt=ALL-UNNAMED",
+        "--add-opens=java.desktop/java.awt.color=ALL-UNNAMED",
+        "--add-opens=java.desktop/java.awt.desktop=ALL-UNNAMED",
+        "--add-opens=java.desktop/java.awt.dnd=ALL-UNNAMED",
+        "--add-opens=java.desktop/java.awt.dnd.peer=ALL-UNNAMED",
+        "--add-opens=java.desktop/java.awt.event=ALL-UNNAMED",
+        "--add-opens=java.desktop/java.awt.font=ALL-UNNAMED",
+        "--add-opens=java.desktop/java.awt.geom=ALL-UNNAMED",
+        "--add-opens=java.desktop/java.awt.im=ALL-UNNAMED",
+        "--add-opens=java.desktop/java.awt.im.spi=ALL-UNNAMED",
+        "--add-opens=java.desktop/java.awt.image=ALL-UNNAMED",
+        "--add-opens=java.desktop/java.awt.image.renderable=ALL-UNNAMED",
+        "--add-opens=java.desktop/java.awt.peer=ALL-UNNAMED",
+        "--add-opens=java.desktop/java.awt.print=ALL-UNNAMED",
+        "--add-opens=java.desktop/java.beans=ALL-UNNAMED",
+        "--add-opens=java.desktop/java.beans.beancontext=ALL-UNNAMED",
+        "--add-opens=java.instrument/java.lang.instrument=ALL-UNNAMED",
+        "--add-opens=java.logging/java.util.logging=ALL-UNNAMED",
+        "--add-opens=java.management/java.lang.management=ALL-UNNAMED",
+        "--add-opens=java.prefs/java.util.prefs=ALL-UNNAMED",
+        "--add-opens=java.rmi/java.rmi=ALL-UNNAMED",
+        "--add-opens=java.rmi/java.rmi.activation=ALL-UNNAMED",
+        "--add-opens=java.rmi/java.rmi.dgc=ALL-UNNAMED",
+        "--add-opens=java.rmi/java.rmi.registry=ALL-UNNAMED",
+        "--add-opens=java.rmi/java.rmi.server=ALL-UNNAMED",
+        "--add-opens=java.sql/java.sql=ALL-UNNAMED"
+]
+
+version "0.27"
 group "goals"
 
 apply plugin:"eclipse"
 apply plugin:"idea"
 apply plugin:"war"
 apply plugin:"org.grails.grails-web"
-apply plugin: "org.grails.plugins.views-json"
-apply plugin:"com.energizedwork.webdriver-binaries"
-apply plugin: "com.bertramlabs.asset-pipeline"
+apply plugin:"org.grails.plugins.views-json"
+apply plugin:"com.github.erdi.webdriver-binaries"
 apply plugin:"org.grails.grails-gsp"
+apply plugin:"com.bertramlabs.asset-pipeline"
 
 repositories {
-    mavenLocal()
     maven { url "https://repo.grails.org/grails/core" }
 }
 
+configurations {
+    developmentOnly
+    runtimeClasspath {
+        extendsFrom developmentOnly
+    }
+}
+
 dependencies {
-    compile "org.grails.plugins:views-json"
-    compile "org.grails.plugins:views-json-templates"
+    developmentOnly("org.springframework.boot:spring-boot-devtools")
     compile "org.springframework.boot:spring-boot-starter-logging"
     compile "org.springframework.boot:spring-boot-autoconfigure"
     compile "org.grails:grails-core"
@@ -49,34 +126,41 @@ dependencies {
     compile "org.grails.plugins:cache"
     compile "org.grails.plugins:async"
     compile "org.grails.plugins:scaffolding"
+    compile "org.grails.plugins:views-json"
+    compile "org.grails.plugins:views-json-templates"
     compile "org.grails.plugins:events"
     compile "org.grails.plugins:hibernate5"
-    compile "org.hibernate:hibernate-core:5.1.16.Final"
+    compile "org.hibernate:hibernate-core:5.4.0.Final"
     compile "org.grails.plugins:gsp"
+    compileOnly "io.micronaut:micronaut-inject-groovy"
     console "org.grails:grails-console"
     profile "org.grails.profiles:web"
     runtime "org.glassfish.web:el-impl:2.1.2-b03"
     runtime "com.h2database:h2"
     runtime "org.apache.tomcat:tomcat-jdbc"
-    testCompile "org.grails:grails-test-mixins:3.3.0"
-    runtime "com.bertramlabs.plugins:asset-pipeline-grails:$assetPipelineVersion"
+    runtime "javax.xml.bind:jaxb-api:2.3.1"
+    runtime "com.bertramlabs.plugins:asset-pipeline-grails:3.0.10"
     testCompile "org.grails:grails-gorm-testing-support"
+    testCompile "org.mockito:mockito-core"
     testCompile "org.grails:grails-web-testing-support"
-    testCompile("org.grails.plugins:geb") {
-        exclude group: 'org.gebish', module: 'geb-spock'
+    testCompile "org.grails.plugins:geb"
+    testCompile "org.seleniumhq.selenium:selenium-remote-driver:3.14.0"
+    testCompile "org.seleniumhq.selenium:selenium-api:3.14.0"
+    testCompile "org.seleniumhq.selenium:selenium-support:3.14.0"
+    testRuntime "org.seleniumhq.selenium:selenium-chrome-driver:3.14.0"
+    testRuntime "org.seleniumhq.selenium:selenium-firefox-driver:3.14.0"
+    compile 'org.grails.plugins:spring-security-ui:4.0.0.M1'
+    compile 'org.grails.plugins:spring-security-core:4.0.0.RC2'
+    runtime 'mysql:mysql-connector-java:8.0.17'
+    compile ('org.apache.poi:poi:4.1.0') {
+        exclude group: 'org.slf4j', module: 'slf4j-log4j12'
+        exclude group: 'log4j', module: 'log4j'
     }
-    testCompile 'org.gebish:geb-spock:2.1'
-    testCompile "org.seleniumhq.selenium:selenium-chrome-driver:3.6.0"
-    testCompile "org.seleniumhq.selenium:selenium-remote-driver:3.6.0"
-    testCompile "org.seleniumhq.selenium:selenium-api:3.6.0"
-    testCompile "org.seleniumhq.selenium:selenium-support:3.6.0"
-    testRuntime "org.seleniumhq.selenium:selenium-chrome-driver:3.6.0"
-    testRuntime "org.seleniumhq.selenium:selenium-firefox-driver:3.6.0"
-    compile 'org.grails.plugins:spring-security-ui:3.1.1'
-    runtime 'mysql:mysql-connector-java:5.1.39'
-    compile 'org.apache.poi:poi:3.17'
-    compile 'org.apache.poi:poi-ooxml:3.17'
-    compile 'org.apache.poi:ooxml-schemas:1.4'
+    compile ('org.apache.poi:poi-ooxml:4.1.0') {
+        exclude group: 'org.slf4j', module: 'slf4j-log4j12'
+        exclude group: 'log4j', module: 'log4j'
+    }
+    compile 'org.apache.poi:poi-ooxml-schemas:4.1.0'
     compile 'org.grails.plugins:excel-import:3.0.2', {  exclude  module: 'poi-ooxml'
         exclude  module: 'poi'
         exclude  module: 'ooxml-schemas'
@@ -85,21 +169,42 @@ dependencies {
         exclude  module: 'poi'
         exclude  module: 'ooxml-schemas'
     }
-    compile "org.grails.plugins:ckeditor:4.5.9.0"
-    compile 'org.grails.plugins:database-migration:3.0.4'
-    compile 'org.liquibase:liquibase-core:3.5.5'
+//    compile 'org.grails.plugins:database-migration:3.1.0.RC1'
+//    compile 'org.liquibase:liquibase-core:3.8.0'
+    compile 'org.grails.plugins:grails-melody-plugin:1.80.0'
+    compile ('org.docx4j:docx4j-core:11.1.3') {
+        exclude group: 'org.slf4j', module: 'slf4j-log4j12'
+        exclude group: 'log4j', module: 'log4j'
+    }
+    compile ('org.docx4j:docx4j-JAXB-ReferenceImpl:11.1.3') {
+        exclude group: 'org.slf4j', module: 'slf4j-log4j12'
+        exclude group: 'log4j', module: 'log4j'
+    }
+    compile ('org.docx4j:docx4j-ImportXHTML:8.0.0') {
+        exclude group: 'org.slf4j', module: 'slf4j-log4j12'
+        exclude group: 'log4j', module: 'log4j'
+    }
+    compile('javax.xml.bind:jaxb-api:2.3.0') {
+        exclude group: 'org.slf4j', module: 'slf4j-log4j12'
+        exclude group: 'log4j', module: 'log4j'
+    }
 }
 
 bootRun {
-    jvmArgs('-Dspring.output.ansi.enabled=always')
-    addResources = true
+    jvmArgs(
+        '-Dspring.output.ansi.enabled=always', 
+        '-noverify', 
+        '-XX:TieredStopAtLevel=1',
+        '-Xmx1024m')
+    jvmArgs(jvmOpenModulesArgs)
+    sourceResources sourceSets.main
     String springProfilesActive = 'spring.profiles.active'
     systemProperty springProfilesActive, System.getProperty(springProfilesActive)
 }
 
 webdriverBinaries {
-    chromedriver '2.40'
-    geckodriver '0.21.0'
+    chromedriver '2.45.0'
+    geckodriver '0.24.0'
 }
 
 tasks.withType(Test) {
@@ -107,30 +212,28 @@ tasks.withType(Test) {
     systemProperty "geb.build.reportsDir", reporting.file("geb/integrationTest")
     systemProperty "webdriver.chrome.driver", System.getProperty('webdriver.chrome.driver')
     systemProperty "webdriver.gecko.driver", System.getProperty('webdriver.gecko.driver')
+    jvmArgs = jvmOpenModulesArgs
 }
 
 tasks.withType(GroovyCompile) {
     configure(groovyOptions.forkOptions) {
         memoryMaximumSize = '4g'
-        jvmArgs = ['-XX:MaxPermSize=2g', '-Xms2g', '-Xmx4g']
+        jvmArgs = ['-Xms2g', '-Xmx4g']
     }
+    options.forkOptions.jvmArgs = jvmOpenModulesArgs
 }
 
 tasks.withType(War) {
     doLast {
         exec {
-           executable './release.sh'
+            executable './release.sh'
         }
     }
 }
 
-
-
-
 assets {
     minifyJs = true
     minifyCss = true
-
     minifyOptions = [
             languageMode: 'ES6',
             targetLanguage: 'ES6', //Can go from ES6 to ES5 for those bleeding edgers
